# Instrumented-Microservice-OTel-Collector-Prometheus

./: .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  ROADMAP.md
.github/: pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: ci.yml
otel-microservice-lab/: .gitignore  Dockerfile  Dockerfile.worker  Makefile  README.md  pyproject.toml  requirements-dev.txt  requirements.txt
otel-microservice-lab/.github/workflows/: ci.yml
otel-microservice-lab/app/: cache.py  config.py  db.py  main.py  metrics.py  models.py  otel.py  schemas.py
otel-microservice-lab/dashboards/: otel_lab_dashboard.json
otel-microservice-lab/infra/: docker-compose.yml  otel-collector-config.yaml  prometheus.yml
otel-microservice-lab/infra/grafana/dashboards/: otel_lab_dashboard.json
otel-microservice-lab/infra/grafana/provisioning/dashboards/: dashboards.yaml
otel-microservice-lab/scripts/: loadtest.js
otel-microservice-lab/tests/: test_app.py
otel-microservice-lab/worker/: celery_app.py  client.py  otel.py  tasks.py
scripts/: demo.sh  smoke_test.sh
